--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -40,6 +40,19 @@
     }
 }
 
+.electricity-country-summary {
+    font-size: 0.9em;
+
+    .card-body dl {
+        display: grid;
+        margin-bottom: 0;
+        grid-template-columns: auto auto;
+        column-gap: 0.5em;
+
+        dd { text-align: right; }
+    }
+}
+
 .longread-figure img.infographic {
     width: 107%;
 }
@@ -56,5 +69,13 @@
         .card-img-top {
             width: 100%;
         }
+    }
+
+    .electricity-country-summary {
+        float: right;
+        clear: right;
+        margin-right: -15% !important;
+        margin-left: 1.5em !important;
+        font-size: 1em;
     }
 }
