První sada technických oprav

--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -98,7 +98,7 @@ $c-callout-text: #373633;
     grid-template-columns: 80px 1fr;
 }
 
-.certifikace-loga > a {
+.certifikace-loga > picture {
     display: block;
     max-width: 10em;
     margin: 0 auto;
