--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -104,6 +104,31 @@ $c-callout-text: #373633;
     margin: 0 auto;
 }
 
+#mix-transformation-survey-countries {
+    display: flex;
+    flex-direction: column;
+
+    .mix-triangle {
+        display: flex;
+        align-items: start;
+        justify-content: center;
+
+        img {
+            width: 100%;
+            max-width: 30rem;
+        }
+    }
+
+    .mix-figures {
+        padding-bottom: 0;
+
+        dl { column-count: 2; }
+        .mix-fossil { color: #8c2c79; }
+        .mix-nuclear { color: #024b7a; }
+        .mix-renewables { color: #f58800; }
+    }
+}
+
 @media (min-width: 768px) {
     .lesni-certifikace-opatreni {
         grid-template-columns: 120px 1fr;
@@ -124,6 +149,17 @@ $c-callout-text: #373633;
     .extremy-histogramy {
         grid-template-columns: 7fr 5fr;
         row-gap: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    #mix-transformation-survey-countries {
+        .card-content-container {
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
+        }
+
+        .mix-figures dl { column-count: 1; }
     }
 }
 
