--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -22,16 +22,24 @@ $c-callout-text: #373633;
     }
 }
 
+.logos {
+    mix-blend-mode: multiply;
+}
+
+.principy-prace {
+    grid-template-columns: 6rem 1fr;
+}
+
+.principy-prace > img {
+    align-self: center;
+}
+
 .member-small {
     display: grid;
     grid-template-columns: 90px auto;
     grid-gap: 1rem;
     .team-photo { width: 100%; }
     div { align-self: center; }
-}
-
-.logos {
-    mix-blend-mode: multiply;
 }
 
 @media (min-width: 768px) {
