Vyčlenění kódu pro ikonky k Fit for 55
Kód a styly pro stavové ikonky vyčleněn do zvláštního souboru
a lokálního CSS.

--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -208,3 +208,12 @@ $c-callout-text: #373633;
 .pictogram-small {
     max-width: 3rem;
 }
+
+.ff55-done, .ff55-inprogress {
+    margin-left: 0.5em;
+    color: #9ba5ad;
+}
+
+.ff55-done {
+    color: #8ab59b;
+}
