--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -135,6 +135,10 @@ $c-callout-text: #373633;
     margin-top: 2rem !important;
 }
 
+.onepager-frame {
+    display: none;
+}
+
 #mix-transformation-survey-countries {
     display: flex;
     flex-direction: column;
@@ -197,6 +201,13 @@ $c-callout-text: #373633;
     .extremy-histogramy {
         grid-template-columns: 7fr 5fr;
         row-gap: 2rem;
+    }
+
+
+    .onepager-frame {
+        display: block;
+        width: 100%;
+        height: 800px;
     }
 }
 
