--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -172,10 +172,7 @@ $c-callout-text: #373633;
 
     .checklist {
         padding-left: 0;
-        column-count: 2;
-        column-gap: 1em;
         list-style: none;
-        white-space: nowrap;
     }
 
     .checklist .fas { margin-right: 0.5em; }
@@ -204,6 +201,13 @@ $c-callout-text: #373633;
 
         h3 { grid-column: 1 / 3; }
         .longread-figure { max-width: initial; }
+    }
+
+    .climate-laws-survey-countries {
+        .checklist {
+            column-count: 2;
+            column-gap: 1em;
+        }
     }
 }
 
