Tabulka: oprava v textu a polish pro mobily
Tento commit opravuje layout pro mobily (kde se tabulka na šířku skoro
vešla). Taky ve vysvětlujícím textu opravuje jedno typo a přidává
jednotky.

--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -251,15 +251,25 @@ $c-callout-text: #373633;
 }
 
 .tabulka-uzemni-stopa-oze {
-    td.important {
+    td {
         font-weight: bold;
     }
-    th:not(.important) {
+    th:not(.important), .unit {
         font-weight: normal;
     }
     td:not(.important), .unit {
-        font-weight: normal;
         color: $c-grey;
         font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 575px) {
+    .tabulka-uzemni-stopa-oze {
+        th:not(.important), td:not(.important) {
+            font-size: 0.8rem;
+        }
+        td, th {
+            padding: 0.5rem;
+        }
     }
 }
