--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -118,9 +118,88 @@ $c-callout-text: #373633;
     grid-template-columns: 3em 1fr;
 }
 
-@media (min-width: 768px) {
-    .studie-2050-kroky {
+.uhelna-studie-otazky {
+    margin-bottom: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+
+    .card {
+        max-width: 100%;
+        margin: 0;
+        background: none;
+        border: none;
+
+        > .small {
+            margin-bottom: .25rem;
+            color: $c-grey;
+            font-size: .85rem;
+        }
+    }
+}
+
+.uhelna-studie-sada-scenaru {
+    margin-top: 2.5rem;
+    display: grid;
+    grid-template-columns: auto auto 1rem auto;
+
+    h4::before {
+        content: "scénář";
+        position: absolute;
+        margin-top: -1rem;
+        color: $c-grey;
+        font-weight: normal;
+        font-size: .85rem;
+    }
+
+    h4.scenario-left { grid-column: 1 / 3; }
+    h4.scenario-right { grid-column: 3 / 5; }
+    .heading {
+        margin-top: 1rem;
+        grid-column: 1 / 5;
+    }
+
+    p {
+        margin-bottom: 0;
+        font-size: 1rem;
+    }
+
+    .source-type { grid-column: 1 / 2; }
+    .value-left { grid-column: 2 / 4; }
+    .value-right { grid-column: 4 / 5; }
+}
+
+.uhelna-studie-doporuceni {
+    margin-top: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2.5rem 1.5rem;
+
+    .card {
+        max-width: 100%;
+        margin: 0;
+        display: grid;
         grid-template-columns: 4em 1fr;
+        align-content: start;
+        column-gap: 1rem;
+        row-gap: 1rem;
+        background: none;
+        border: none;
+
+        .longread-figure {
+            /* Take up zero vertical space -- let the row height be determined by the
+             * adjacent heading. */
+            height: 0;
+            grid-column: 1 / 2;
+            margin: -.25rem 0 0 0;
+        }
+
+        h3, p {
+            grid-column: 2 / 3;
+            margin: 0;
+        }
+
+        p + p { font-size: 80%; }
     }
 }
 
@@ -232,8 +311,8 @@ $c-callout-text: #373633;
     .slider {
         width: 100%;
         height: 5px;
-        margin-top: 1.5rem; 
-        margin-bottom: 1.5rem;  
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
         grid-row: 3 / 4;
         grid-column: 1 / 3;
         align-self: center;
@@ -387,6 +466,21 @@ $c-callout-text: #373633;
         .checklist li[title] {
             text-decoration: none;
         }
+    }
+
+    .studie-2050-kroky {
+        grid-template-columns: 4em 1fr;
+    }
+
+    .uhelna-studie-otazky .card {
+        max-width: 50%;
+        flex: 1 1 40%;
+    }
+
+    .uhelna-studie-doporuceni .card {
+        max-width: 50%;
+        flex: 1 1 40%;
+        column-gap: 1rem;
     }
 
     #ets2-kalkulacka {
