--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -152,6 +152,7 @@ $c-callout-text: #373633;
         font-size: .85rem;
     }
 
+    h4 { padding-right: 1rem; }
     h4.scenario-left { grid-column: 1 / 3; }
     h4.scenario-right { grid-column: 3 / 5; }
     .heading {
