--- a/assets-local/_local.scss
+++ b/assets-local/_local.scss
@@ -1,5 +1,5 @@
 @use "colors";
-@import "atlas-dekarbonizace.scss";
+@use "atlas-dekarbonizace";
 
 /* Local CSS for Czech web version */
 $c-callout-background: #f7efde;
