--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -1,4 +1,5 @@
 @import "atlas-dekarbonizace.scss";
+@import "colors";
 
 /* Local CSS for Czech web version */
 $c-callout-background: #f7efde;
@@ -134,7 +135,7 @@ $c-callout-text: #373633;
 
         > .small {
             margin-bottom: .25rem;
-            color: $c-grey;
+            color: colors.$c-grey;
             font-size: .85rem;
         }
     }
@@ -149,7 +150,7 @@ $c-callout-text: #373633;
         content: "scénář";
         position: absolute;
         margin-top: -1rem;
-        color: $c-grey;
+        color: colors.$c-grey;
         font-weight: normal;
         font-size: .85rem;
     }
