Nahození landing page pro Atlas dekarbonizace

--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -1,3 +1,5 @@
+@import "atlas-dekarbonizace.scss";
+
 /* Local CSS for Czech web version */
 $c-callout-background: #f7efde;
 $c-callout-text: #373633;
