--- a/assets-local/local.scss
+++ b/assets-local/local.scss
@@ -1,5 +1,5 @@
+@use "colors";
 @import "atlas-dekarbonizace.scss";
-@import "colors";
 
 /* Local CSS for Czech web version */
 $c-callout-background: #f7efde;
