Přesun povinné publicity na landing page Atlasu dekarbonizace
- Přesun povinné textace dolů na landing page
- Smazání stránky /atlassfzp + redirect na landing page odsud

--- a/assets-local/_atlas-dekarbonizace.scss
+++ b/assets-local/_atlas-dekarbonizace.scss
@@ -384,6 +384,23 @@
         line-height: 1.6;
     }
 
+    .inline-list {
+        list-style: none;
+
+        li {
+            display: inline;
+
+            &:first-child::before {
+                display: none;
+            }
+
+            &::before {
+                content: "\2022";
+                margin: 0 0.4em 0 0.3em;
+            }
+        }
+    }
+
     /* Lightbox */
     .lightbox {
         display: none;
