--- a/assets-local/_atlas-dekarbonizace.scss
+++ b/assets-local/_atlas-dekarbonizace.scss
@@ -1,5 +1,28 @@
-/* Atlas dekarbonizace Česka - Landing Page v2.2 - 2025-10-02 */
+/* Atlas dekarbonizace Česka - Landing Page v2.4 - 2025-11-12 */
+
+/* Variables */
+$fullscreen-max-width: 1100px;
+
+
 .landing-page-atlas-dekarbonizace {
+
+    @font-face {
+        font-family: "Roobert";
+        src: url("/assets-local/fonts/Roobert-Regular.woff2") format("woff2");
+        font-weight: 400;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: "Roobert";
+        src: url("/assets-local/fonts/Roobert-Bold.woff2") format("woff2");
+        font-weight: 800;
+        font-style: normal;
+    }
+
+    > main {
+        font-family: "Roobert", sans-serif;
+    }
 
     /* Online Badge - floating */
     .online-badge-float {
@@ -28,18 +51,21 @@
 
     /* Hero Section */
     .hero {
-        background: linear-gradient(135deg, #006C90 0%, #0091B8 100%);
+        background-image:
+            linear-gradient(135deg, rgb(0 79 123) 0%, rgba(0, 144, 184, 0) 100%),
+            url("/assets-local/atlas-dekarbonizace/hero-illustration.svg"),
+            linear-gradient(135deg, #006C90 0%, #0091B8 100%);
         color: white;
-        padding: 40px 20px 80px 20px;
+        padding: 80px 20px 50px 20px;
         position: relative;
         overflow: visible;
     }
 
     .hero-content {
-        max-width: 1200px;
+        max-width: $fullscreen-max-width;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: 45% 55%;
+        grid-template-columns: 2fr 3fr;
         gap: 40px;
         align-items: flex-start;
     }
@@ -48,17 +74,18 @@
         padding-top: 20px;
 
         h1 {
-            font-size: 3.5rem;
+            font-size: 4rem;
             font-weight: 700;
             margin-bottom: 30px;
-            line-height: 1.1;
+            line-height: 1.2;
             color: white;
         }
 
         p {
-            font-size: 1.1rem;
-            margin-bottom: 30px;
-            line-height: 1.6;
+            font-size: 1.2rem;
+            /* Optical spacing */
+            margin-bottom: 40px;
+            line-height: 1.3;
         }
     }
 
@@ -66,9 +93,11 @@
         display: inline-block;
         background: white;
         color: #003d52;
-        padding: 15px 35px;
+        padding: 15px 25px;
         text-decoration: none;
-        font-weight: 700;
+        font-weight: 800;
+        letter-spacing: 0.02rem;
+        text-transform: uppercase;
         border-radius: 5px;
         transition: all 0.3s;
         font-size: 1rem;
@@ -81,11 +110,13 @@
 
     .hero-image {
         position: relative;
-        z-index: 10;
+        top: 80px;
+        z-index: 5;
         display: flex;
         justify-content: flex-end;
         margin-top: 0;
         margin-bottom: -320px;
+        animation: floating-book 6s ease-in-out infinite;
     }
 
     .hero-image img {
@@ -93,7 +124,6 @@
         max-width: 700px;
         height: auto;
         position: relative;
-        z-index: 5;
     }
 
     /* Features Section */
@@ -108,27 +138,28 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 40px;
-        max-width: 1200px;
+        max-width: $fullscreen-max-width;
         margin: 0 auto;
     }
 
     .feature-card {
-        text-align: center;
+        text-align: left;
         padding: 30px 20px;
     }
 
     .feature-icon {
-        width: 120px;
-        height: 120px;
+        width: 140px;
+        height: 140px;
         margin: 0 auto 20px;
     }
 
     .feature-card strong {
         display: block;
         color: #006C90;
-        font-size: 1.15rem;
-        line-height: 1.4;
-        font-weight: 700;
+        font-size: 1.2rem;
+        line-height: 1.3;
+        font-weight: 600;
+        max-width: 40ch;
     }
 
     /* Preview Section */
@@ -138,7 +169,7 @@
     }
 
     .preview-container {
-        max-width: 1200px;
+        max-width: $fullscreen-max-width;
         margin: 0 auto;
         display: grid;
         grid-template-columns: 1.5fr 1fr;
@@ -250,8 +281,8 @@
         margin-bottom: 20px;
         background: #006C90;
         color: white;
-        padding: 15px 40px;
-        font-size: 1.1rem;
+        padding: 15px 25px;
+        font-size: 1rem;
     }
 
     .cta-box-text {
@@ -278,10 +309,10 @@
     }
 
     .course-content {
-        max-width: 1200px;
+        max-width: $fullscreen-max-width;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 4fr 3fr;
         gap: 60px;
         align-items: center;
     }
@@ -296,21 +327,13 @@
     .course-features {
         list-style: none;
         margin-bottom: 30px;
+        padding-left: 0px;
     }
 
     .course-features li {
-        padding: 12px 0;
-        padding-left: 30px;
+        padding: 0.3rem 0;
         position: relative;
-        font-size: 1.05rem;
-    }
-
-    .course-features li:before {
-        content: "✓";
-        position: absolute;
-        left: 0;
-        font-weight: bold;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
     .btn-secondary.btn-cta {
@@ -346,6 +369,85 @@
         height: 100%;
     }
 
+    /* Testimonials section*/
+
+    .testimonials-section {
+        padding: 3rem 0;
+    }
+
+    .testimonials-container {
+        display: flex;
+        justify-content: center;
+        max-width: $fullscreen-max-width;
+        margin: 0 auto;
+    }
+
+    .testimonial-card {
+        max-width: 400px;
+        min-width: 350px;
+        text-align: left;
+        color: #006C90;
+        padding: 2rem;
+        margin-right: 2rem;
+        border-radius: 1rem;
+        background: white;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr;
+        border-bottom-left-radius: 5rem;
+
+        .text {
+            font-size: 1.2rem;
+            font-weight: 600;
+            grid-row: 1/2;
+        }
+
+        .person-info {
+            grid-row: 2/3;
+            align-self: end;
+            display: grid;
+            grid-template-columns: 1fr 4fr;
+            grid-template-rows: 1fr 1fr;
+            grid-column-gap: 1rem;
+            padding-top: 2rem;
+
+            .photo {
+                width: 120px;
+                height: 120px;
+                border-radius: 50%;
+                grid-column: 1/2;
+                grid-row: 1/3;
+                align-self: center;
+                overflow: hidden;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .name {
+                grid-column: 2/3;
+                grid-row: 1/2;
+                font-size: 1.2rem;
+                font-weight: bold;
+                align-self: end;
+            }
+
+            .institution {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                font-size: 0.8rem;
+                text-transform: uppercase;
+                letter-spacing: 0.02;
+                align-self: start;
+            }
+        }
+
+
+    }
+
     /* Logos Section */
     .logos-section {
         background: white;
@@ -353,7 +455,7 @@
     }
 
     .logos-container {
-        max-width: 1200px;
+        max-width: $fullscreen-max-width;
         margin: 0 auto;
     }
 
@@ -362,7 +464,7 @@
         grid-template-columns: repeat(4, 1fr);
         gap: 40px;
         align-items: center;
-        justify-items: center;
+        justify-items: left;
         margin-bottom: 30px;
     }
 
@@ -378,7 +480,7 @@
     }
 
     .logos-text {
-        text-align: center;
+        text-align: left;
         color: #666;
         font-size: 0.95rem;
         line-height: 1.6;
@@ -396,7 +498,7 @@
 
             &::before {
                 content: "\2022";
-                margin: 0 0.4em 0 0.3em;
+                margin: 0 0 0 0.3em;
             }
         }
     }
@@ -584,5 +686,28 @@
             grid-template-columns: 1fr;
             gap: 40px;
         }
+
+        .testimonial-card {
+            min-width: none;
+        }
     }
+
+
+
+    /* Animations */
+
+    @keyframes floating-book {
+        0% {
+            transform: translateY(0);
+        }
+
+        50% {
+            transform: translateY(-30px);
+        }
+
+        100% {
+            transform: translateY(0);
+        }
+    }
+
 }
