--- a/assets-local/_local.scss
+++ b/assets-local/_local.scss
@@ -515,12 +515,13 @@ $c-callout-text: #373633;
     flex-direction: column;
 
     .card {
-        border-width: 3px;
+        padding: .5rem .75rem;
+        border-width: 3px solid #d9d9d9;
+        border-radius: .75rem;
     }
 
     .card-header {
         display: flex;
-        padding: 1rem 1.75rem;
         background: none;
         border-bottom: 0;
         font-size: 1.6rem;
