--- a/assets-local/_local.scss
+++ b/assets-local/_local.scss
@@ -516,7 +516,7 @@ $c-callout-text: #373633;
 
     .card {
         padding: .5rem .75rem;
-        border-width: 3px solid #d9d9d9;
+        border: 3px solid #d9d9d9;
         border-radius: .75rem;
     }
 
