Oprava zobrazení mapky

--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -101,7 +101,7 @@ $c-teplarny-ostatni: #b4b4b4;
         }
     }
 
-    .map {
+    .map > div {
         display: inline-block;
         position: relative;
 
